# kiconedit

./: Makefile  README.md  kiconedit.spec
src/: AUTHORS  CMakeLists.txt  Messages.sh  NEWS  kcolorgrid.cpp  kcolorgrid.h  kiconcolors.cpp  kiconcolors.h  kiconconfig.cpp  kiconconfig.h  kiconedit.cpp  kiconedit.desktop  kiconedit.h  kiconediticon.cpp  kiconediticon.h  kiconeditslots.cpp  kiconeditui.rc  kicongrid.cpp  kicongrid.h  knew.cpp  knew.h  kresize.cpp  kresize.h  main.cpp  palettetoolbar.cpp  palettetoolbar.h  properties.cpp  properties.h  utils.cpp  utils.h
src/doc/: CMakeLists.txt  index.docbook
src/doc-translations/: CMakeLists.txt
src/pics/: CMakeLists.txt
src/pics/icons/: CMakeLists.txt
src/pics/toolbar/: CMakeLists.txt
src/po/: CMakeLists.txt
src/po/af/: kiconedit.po
src/po/ar/: kiconedit.po
src/po/be/: kiconedit.po
src/po/bg/: kiconedit.po
src/po/br/: kiconedit.po
src/po/ca/: kiconedit.po
src/po/ca@valencia/: kiconedit.po
src/po/cs/: kiconedit.po
src/po/cy/: kiconedit.po
src/po/da/: kiconedit.po
src/po/de/: kiconedit.po
src/po/el/: kiconedit.po
src/po/en_GB/: kiconedit.po
src/po/eo/: kiconedit.po
src/po/es/: kiconedit.po
src/po/et/: kiconedit.po
src/po/eu/: kiconedit.po
src/po/fa/: kiconedit.po
src/po/fi/: kiconedit.po
src/po/fr/: kiconedit.po
src/po/ga/: kiconedit.po
src/po/gl/: kiconedit.po
src/po/he/: kiconedit.po
src/po/hi/: kiconedit.po
src/po/hne/: kiconedit.po
src/po/hr/: kiconedit.po
src/po/hu/: kiconedit.po
src/po/is/: kiconedit.po
src/po/it/: kiconedit.po
src/po/ja/: kiconedit.po
src/po/km/: kiconedit.po
src/po/ko/: kiconedit.po
src/po/lt/: kiconedit.po
src/po/lv/: kiconedit.po
src/po/mai/: kiconedit.po
src/po/mk/: kiconedit.po
src/po/ms/: kiconedit.po
src/po/nb/: kiconedit.po
src/po/nds/: kiconedit.po
src/po/ne/: kiconedit.po
src/po/nl/: kiconedit.po
src/po/nn/: kiconedit.po
src/po/oc/: kiconedit.po
src/po/pa/: kiconedit.po
src/po/pl/: kiconedit.po
src/po/pt/: kiconedit.po
src/po/pt_BR/: kiconedit.po
src/po/ro/: kiconedit.po
src/po/ru/: kiconedit.po
src/po/se/: kiconedit.po
src/po/sk/: kiconedit.po
src/po/sl/: kiconedit.po
src/po/sv/: kiconedit.po
src/po/ta/: kiconedit.po
(+21 files in other folders)
